--- a/html/results.html
+++ b/html/results.html
@@ -138,47 +138,49 @@
         </div>
       </div>
     </footer>
-    <!-- POPUP - START -->
-    <div class="card modal modal-results" id="resultsPerUserModal">
-      <div class="card-header pb-0">
-        <div class="row">
-          <div class="col-lg-6 col-7 text-yellow">
-            <h6 class="text-xl">IMPACTO INDIVIDUAL DA OPÇÃO [<span class="text-yellow" id="labelImpactOption">---</span>]</h6>
-            <p>* Do mais impactado negativamente para o menos impactado</p>
+    <div id="divPopups">
+      <!-- POPUP IMPACTS - START -->
+      <div class="card modal modal-results" id="resultsPerUserModal">
+        <div class="card-header pb-0">
+          <div class="row">
+            <div class="col-lg-6 col-7 text-yellow">
+              <h6 class="text-xl">IMPACTO INDIVIDUAL DA OPÇÃO [<span class="text-yellow" id="labelImpactOption">---</span>]</h6>
+              <p>* Do mais impactado negativamente para o menos impactado</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-body px-0 pb-2">
+          <div class="table-responsive">
+            <table class="table align-items-center mb-0">
+              <thead>
+              <tr>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">USUÁRIO</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">E</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">V</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">C</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">EVC</th>
+              </tr>
+              </thead>
+              <tbody id="tableImpacted"></tbody>
+            </table>
+            <br/>
+            <div class="d-flex">
+              <i class="material-icons text-sm my-auto me-1">info</i>
+              <p class="mb-0 text-sm"> <span class="text-red">VERMELHO</span> - Impacto <b>negativo</b>. </p>
+            </div>
+            <div class="d-flex">
+              <i class="material-icons text-sm my-auto me-1">info</i>
+              <p class="mb-0 text-sm"> <span class="text-yellow">AMARELO</span> - Impacto <b>neutro</b>. </p>
+            </div>
+            <div class="d-flex">
+              <i class="material-icons text-sm my-auto me-1">info</i>
+              <p class="mb-0 text-sm"> <span class="text-green">VERDE</span> - Impacto <b>positivo</b>. </p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="card-body px-0 pb-2">
-        <div class="table-responsive">
-          <table class="table align-items-center mb-0">
-            <thead>
-            <tr>
-              <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">USUÁRIO</th>
-              <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">E</th>
-              <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">V</th>
-              <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">C</th>
-              <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">EVC</th>
-            </tr>
-            </thead>
-            <tbody id="tableImpacted"></tbody>
-          </table>
-          <br/>
-          <div class="d-flex">
-            <i class="material-icons text-sm my-auto me-1">info</i>
-            <p class="mb-0 text-sm"> <span class="text-red">VERMELHO</span> - Impacto <b>negativo</b>. </p>
-          </div>
-          <div class="d-flex">
-            <i class="material-icons text-sm my-auto me-1">info</i>
-            <p class="mb-0 text-sm"> <span class="text-yellow">AMARELO</span> - Impacto <b>neutro</b>. </p>
-          </div>
-          <div class="d-flex">
-            <i class="material-icons text-sm my-auto me-1">info</i>
-            <p class="mb-0 text-sm"> <span class="text-green">VERDE</span> - Impacto <b>positivo</b>. </p>
-          </div>
-        </div>
-      </div>
+      <!-- POPUP IMPACTS - END -->
     </div>
-    <!-- POPUP - END -->
   </div>
 </main>
 <!--   Core JS Files   -->
