--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -195,7 +195,7 @@
               </div>
             </div>
             <div class="card-body p-3 text-center">
-              <div id="chartdiv"></div>
+              <div id="moreMotivatedStudentDiv" class="radar-chart-motivated-v1"></div>
             </div>
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3 align-right">
@@ -215,7 +215,7 @@
               </div>
             </div>
             <div class="card-body p-3 text-center">
-              RADAR CHART
+              <div id="lessMotivatedStudentDiv" class="radar-chart-motivated-v2"></div>
             </div>
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3 align-right">
@@ -235,7 +235,7 @@
               </div>
             </div>
             <div class="card-body p-3 text-center">
-              RADAR CHART
+              <div id="moreMotivatedCoursetDiv" class="radar-chart-motivated-v1"></div>
             </div>
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3 align-right">
@@ -255,7 +255,7 @@
               </div>
             </div>
             <div class="card-body p-3 text-center">
-              RADAR CHART
+              <div id="lessMotivatedCoursetDiv" class="radar-chart-motivated-v2"></div>
             </div>
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3 align-right">
@@ -370,7 +370,10 @@
   <script src="/js/loadingoverlay.min.js"></script>
   <script src="/js/drawflow.js" type="module"></script>
   <script src="/js/dashboard.js" type="module"></script>
-  <script src="/js/reportCharts.js" type="module"></script>
+  <script src="/js/reportChartsMoreMotivatedStudent.js"></script>
+  <script src="/js/reportChartsLessMotivatedStudent.js"></script>
+  <script src="/js/reportChartsMoreMotivatedCourse.js"></script>
+  <script src="/js/reportChartsLessMotivatedCourse.js"></script>
 </body>
 
 </html>
